--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -3,34 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Character Breakdown</title>
+    <title>Character Breakdown & Design</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="character-breakdown-container">
         <h1>Character Breakdown & Design</h1>
         <a href="dashboard.html" class="back-btn">← Back to Dashboard</a>
 
-        <!-- Character Input Form -->
-        <div class="character-form">
-            <h2>Add a New Character</h2>
-            <input type="text" id="character-name" placeholder="Character Name">
-            <input type="text" id="actor-name" placeholder="Actor Name">
-            <input type="number" id="character-age" placeholder="Age">
-            <input type="text" id="skin-tone" placeholder="Skin Tone">
-            <input type="text" id="hair-type" placeholder="Hair Type">
-            <textarea id="special-requirements" placeholder="Special Requirements (Wigs, Tattoos, etc.)"></textarea>
-            <input type="file" id="character-image" accept="image/*">
-            <button onclick="addCharacter()">Add Character</button>
+        <!-- Character Profiles -->
+        <div class="character-section">
+            <h2>Character Profiles</h2>
+            <form id="character-form">
+                <input type="text" id="char-name" placeholder="Character Name">
+                <input type="text" id="actor-name" placeholder="Actor Name">
+                <input type="number" id="char-age" placeholder="Age">
+                <input type="text" id="char-skin" placeholder="Skin Tone">
+                <input type="text" id="char-hair" placeholder="Hair Type">
+                <textarea id="char-notes" placeholder="Special Requirements (Wigs, Tattoos, etc.)"></textarea>
+                <input type="file" id="char-image" accept="image/*">
+                <button type="button" onclick="addCharacter()">Add Character</button>
+            </form>
+            <div id="character-list" class="character-list"></div>
         </div>
 
-        <!-- Character List Display -->
-        <div class="character-list">
-            <h2>Character Profiles</h2>
-            <div id="character-profiles"></div>
+        <!-- Moodboards Section -->
+        <div class="character-section">
+            <h2>Moodboards</h2>
+            <div class="moodboard-upload" onclick="document.getElementById('moodboard-input').click()">Drag & Drop Images Here</div>
+            <input type="file" id="moodboard-input" accept="image/*" multiple style="display: none;">
+            <div class="moodboard-grid" id="moodboard-grid"></div>
+        </div>
+
+        <!-- Lookbooks Section -->
+        <div class="character-section">
+            <h2>Lookbooks</h2>
+            <div class="lookbook-grid" id="lookbook-grid"></div>
         </div>
     </div>
 
-    <script src="assets/js/character-breakdown.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
