--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -42,6 +42,6 @@
         </div>
     </div>
 
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/character-breakdown.js"></script>
 </body>
 </html>
