--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -40,7 +40,20 @@
             <h2>Lookbooks</h2>
             <div class="lookbook-grid" id="lookbook-grid"></div>
         </div>
-    </div>
+    </div><!-- Film Color Palette Section -->
+<div class="character-section">
+    <h2>🎨 Film Color Palette</h2>
+
+    <!-- Color Picker -->
+    <input type="color" id="colorPicker" value="#FF5733">
+    <button id="addColorBtn">Add Color</button>
+
+    <!-- Selected Colors Display -->
+    <div id="colorSwatches" class="color-swatches"></div>
+
+    <!-- Save & Sync Button -->
+    <button id="savePaletteBtn">Save & Sync</button>
+</div>
 
     <script src="assets/js/character-breakdown.js"></script>
 </body>
