--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -40,7 +40,7 @@
             <h2>Lookbooks</h2>
             <div class="lookbook-grid" id="lookbook-grid"></div>
         </div>
-    </div><!-- Film Color Palette Section -->
+    <!-- Film Color Palette Section -->
 <div class="character-section">
     <h2>🎨 Film Color Palette</h2>
 
@@ -52,6 +52,6 @@
     <div id="colorSwatches" class="color-swatches"></div>
 </div>
 
-    <script src="assets/js/character-breakdown.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.2/color-thief.min.js"></script>
 </body>
 </html>
