--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -45,9 +45,11 @@
         <div class="character-section">
             <h2>🎨 Film Color Palette</h2>
 
-            <!-- Color Picker -->
-            <input type="color" id="colorPicker" value="#FF5733">
-            <button id="addColorBtn">Add Color</button>
+            <!-- Color Picker Pop-Up -->
+<div id="colorPickerContainer" class="color-picker-popup">
+    <input type="color" id="colorPicker" value="#FF5733">
+    <button id="confirmColorBtn">Confirm Color</button>
+</div>
 
             <!-- Selected Colors Display -->
             <div id="colorSwatches" class="color-swatches"></div>
