--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -40,7 +40,13 @@
             <h2>Lookbooks</h2>
             <div class="lookbook-grid" id="lookbook-grid"></div>
         </div>
-
+<!-- 📝 Notes Section -->
+<div class="character-section">
+    <h2>📝 Character Notes</h2>
+    <textarea id="characterNotes" placeholder="Write your notes here..." rows="5"></textarea>
+    <button id="saveNotes">Save Notes</button>
+    <p id="notesMessage" style="color: green; display: none;">✅ Notes saved!</p>
+</div>
         <!-- 🎨 Film Color Palette Section -->
         <div class="character-section">
             <h2>🎨 Film Color Palette</h2>
