--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -35,18 +35,20 @@
             <div class="moodboard-grid" id="moodboard-grid"></div>
         </div>
 
+        <!-- 📝 Notes Section -->
+        <div class="character-section">
+            <h2>📝 Character Notes</h2>
+            <textarea id="characterNotes" placeholder="Write your notes here..." rows="5"></textarea>
+            <button id="saveNotes">Save Notes</button>
+            <p id="notesMessage" style="color: green; display: none;">✅ Notes saved!</p>
+        </div>
+
         <!-- Lookbooks Section -->
         <div class="character-section">
             <h2>Lookbooks</h2>
             <div class="lookbook-grid" id="lookbook-grid"></div>
         </div>
-<!-- 📝 Notes Section -->
-<div class="character-section">
-    <h2>📝 Character Notes</h2>
-    <textarea id="characterNotes" placeholder="Write your notes here..." rows="5"></textarea>
-    <button id="saveNotes">Save Notes</button>
-    <p id="notesMessage" style="color: green; display: none;">✅ Notes saved!</p>
-</div>
+
         <!-- 🎨 Film Color Palette Section -->
         <div class="character-section">
             <h2>🎨 Film Color Palette</h2>
@@ -66,6 +68,6 @@
 
     <!-- ✅ JavaScript Files -->
     <script src="assets/js/character-breakdown.js"></script>
-    <script src="assets/js/filmcolorpalette.js"></script> <!-- ✅ Film Color Palette -->
+    <script src="assets/js/filmcolorpallet.js"></script> <!-- ✅ Fixed Script Name -->
 </body>
 </html>
