--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -49,28 +49,29 @@
             <div class="lookbook-grid" id="lookbook-grid"></div>
         </div>
 
-    </div> <!-- Closing character-breakdown-container -->
-    <!-- 🎨 Film Color Palette Section -->
-<div class="character-section film-color-palette">
-    <h2>🎨 Film Color Palette</h2>
-    
-    <div class="palette-container">
-        <!-- ✅ Large Color Wheel (Left Side) -->
-        <div class="color-wheel-container">
-            <input type="color" id="colorWheel" class="color-wheel">
+        <!-- 🎨 Film Color Palette Section -->
+        <div class="character-section film-color-palette">
+            <h2>🎨 Film Color Palette</h2>
+            
+            <div class="palette-container">
+                <!-- ✅ Large Color Wheel (Left Side) -->
+                <div class="color-wheel-container">
+                    <input type="color" id="colorWheel" class="color-wheel">
+                </div>
+
+                <!-- ✅ Dynamic Color Palette (Right Side) -->
+                <div class="color-palette">
+                    <div class="core-color" id="coreColor">Core Color</div>
+                    <div id="colorSwatches" class="swatches-grid"></div>
+                    <button id="resetPalette">Reset Palette</button>
+                </div>
+            </div>
         </div>
 
-        <!-- ✅ Dynamic Color Palette (Right Side) -->
-        <div class="color-palette">
-            <div class="core-color" id="coreColor">Core Color</div>
-            <div id="colorSwatches" class="swatches-grid"></div>
-            <button id="resetPalette">Reset Palette</button>
-        </div>
-    </div>
-</div>
+    </div> <!-- ✅ Now this properly closes the container -->
 
     <!-- ✅ JavaScript Files -->
     <script src="assets/js/character-breakdown.js"></script>
-    <script src="assets/js/filmColorPalette.js"></script> <!-- ✅ Fixed Script Name -->
+    <script src="assets/js/filmColorPalette.js"></script>
 </body>
 </html>
