--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -29,21 +29,16 @@
                 <div id="character-list" class="character-list"></div>
             </div>
 
-            <!-- ✅ Film Color Palette (Right) -->
-            <div class="character-section film-color-palette">
-                <h2>🎨 Film Color Palette</h2>
-                <div class="palette-container">
-                    <div class="color-wheel-container">
-                        <input type="color" id="colorWheel" class="color-wheel">
-                    </div>
-                    <div class="color-palette">
-                        <div class="core-color" id="coreColor">Core</div>
-                        <div id="colorSwatches" class="swatches-grid"></div>
-                        <button id="resetPalette">Reset Palette</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+           <div class="color-palette">
+    <!-- ✅ Core Color (Now a Rectangle) -->
+    <div class="core-color" id="coreColor">Core</div>
+
+    <!-- ✅ Grid for 2 Rows of 5 Swatches -->
+    <div id="colorSwatches" class="swatches-grid"></div>
+
+    <!-- ✅ Reset Button -->
+    <button id="resetPalette">Reset Palette</button>
+</div>
 
         <!-- ✅ Moodboards Section -->
         <div class="character-section">
