--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -29,16 +29,24 @@
                 <div id="character-list" class="character-list"></div>
             </div>
 
-           <div class="color-palette">
-    <!-- ✅ Core Color (Now a Rectangle) -->
-    <div class="core-color" id="coreColor">Core</div>
+            <!-- 🎨 ✅ Film Color Palette (Right) -->
+            <div class="character-section film-color-palette">
+                <h2>🎨 Film Color Palette</h2>
+                <div class="palette-container">
+                    <!-- ✅ Color Wheel -->
+                    <div class="color-wheel-container">
+                        <input type="color" id="colorWheel" class="color-wheel">
+                    </div>
 
-    <!-- ✅ Grid for 2 Rows of 5 Swatches -->
-    <div id="colorSwatches" class="swatches-grid"></div>
-
-    <!-- ✅ Reset Button -->
-    <button id="resetPalette">Reset Palette</button>
-</div>
+                    <!-- ✅ Core Color & Swatches -->
+                    <div class="color-palette">
+                        <div class="core-color" id="coreColor">Core</div>
+                        <div id="colorSwatches" class="swatches-grid"></div>
+                        <button id="resetPalette">Reset Palette</button>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- ✅ Closes character-profiles-container -->
 
         <!-- ✅ Moodboards Section -->
         <div class="character-section">
