--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -30,21 +30,21 @@
             </div>
 
             <!-- 🎨 ✅ Film Color Palette (Right) -->
-            <div class="character-section film-color-palette">
-                <h2>🎨 Film Color Palette</h2>
-                <div class="palette-container">
-                    <!-- ✅ Color Wheel -->
-                    <div class="color-wheel-container">
-                        <input type="color" id="colorWheel" class="color-wheel">
-                    </div>
+<div class="character-section film-color-palette">
+    <h2>🎨 Film Color Palette</h2>
+    <div class="palette-container">
+        <!-- ✅ Color Wheel -->
+        <div class="color-wheel-container">
+            <input type="color" id="colorWheel" class="color-wheel">
+        </div>
 
-                    <!-- ✅ Core Color & Swatches -->
-                    <div class="color-palette">
-                        <div id="colorSwatches" class="swatches-grid"></div>
-                        <button id="resetPalette">Reset Palette</button>
-                    </div>
-                </div>
-            </div>
+        <!-- ✅ Keep Swatches Grid, Remove Core Color -->
+        <div class="color-palette">
+            <div id="colorSwatches" class="swatches-grid"></div> <!-- ✅ Swatches are still here -->
+            <button id="resetPalette">Reset Palette</button>
+        </div>
+    </div>
+</div>
         </div> <!-- ✅ Closes character-profiles-container -->
 
         <!-- ✅ Moodboards Section -->
