--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -11,29 +11,31 @@
         <h1>Character Breakdown & Design</h1>
         <a href="dashboard.html" class="back-btn">← Back to Dashboard</a>
 
-        <!-- ✅ Row Layout for Character Profiles & Film Color Palette -->
-        <div class="character-profiles-container">
-            <!-- ✅ Character Profiles (Left) -->
-            <div class="character-section">
-                <h2>Character Profiles</h2>
-                <form id="character-form">
-                    <input type="text" id="character-name" placeholder="Character Name">
-                    <input type="text" id="actor-name" placeholder="Actor Name">
-                    <input type="number" id="character-age" placeholder="Age">
-                    <input type="text" id="skin-tone" placeholder="Skin Tone">
-                    <input type="text" id="hair-type" placeholder="Hair Type">
-                    <textarea id="special-requirements" placeholder="Special Requirements (Wigs, Tattoos, etc.)"></textarea>
-                    <input type="file" id="character-image" accept="image/*">
-                    <button type="button" onclick="addCharacter()">Add Character</button>
-                </form>
-                <div id="character-list" class="character-list"></div>
+        <!-- ✅ Main Layout: Character Profiles & Digital Face Chart (Left) + Extras (Right) -->
+        <div class="main-content">
+            <!-- ✅ Left Panel: Character Profiles & Digital Face Chart -->
+            <div class="left-panel">
+                <!-- 🎭 Character Profiles -->
+                <div class="character-section">
+                    <h2>Character Profiles</h2>
+                    <form id="character-form">
+                        <input type="text" id="character-name" placeholder="Character Name">
+                        <input type="text" id="actor-name" placeholder="Actor Name">
+                        <input type="number" id="character-age" placeholder="Age">
+                        <input type="text" id="skin-tone" placeholder="Skin Tone">
+                        <input type="text" id="hair-type" placeholder="Hair Type">
+                        <textarea id="special-requirements" placeholder="Special Requirements (Wigs, Tattoos, etc.)"></textarea>
+                        <input type="file" id="character-image" accept="image/*">
+                        <button type="button" onclick="addCharacter()">Add Character</button>
+                    </form>
+                    <div id="character-list" class="character-grid"></div>
+                </div>
 
-                <!-- 🎭 Digital Face Chart (Now Inside Character Profiles) -->
+                <!-- 🎭 Digital Face Chart (NOW SEPARATE) -->
                 <div class="character-section digital-face-chart">
                     <h2>🎭 Digital Face Chart</h2>
-
                     <div class="face-chart-container">
-                        <!-- 📌 Left Panel: Upload & Saved Looks -->
+                        <!-- Left: Upload & Saved Looks -->
                         <div class="face-chart-left">
                             <h3>📸 Upload Headshot</h3>
                             <input type="file" id="uploadHeadshot" accept="image/*">
@@ -43,20 +45,20 @@
                             <div id="savedLooks" class="saved-looks-grid"></div>
                         </div>
 
-                        <!-- 🎨 Center Workspace: Editable Face Chart -->
+                        <!-- Center: Editable Face Chart -->
                         <div class="face-chart-center">
                             <canvas id="faceCanvas"></canvas>
                             <p>Use AI tools to apply makeup & hair changes.</p>
                         </div>
 
-                        <!-- 🎨 Right Panel: Makeup & Hair Tools -->
+                        <!-- Right: Makeup & Hair Tools -->
                         <div class="face-chart-right">
                             <h3>🎨 Makeup & Hair Tools</h3>
-                            <button class="tool-btn" id="foundationTool">💄 Foundation</button>
-                            <button class="tool-btn" id="eyesTool">👁️ Eyes</button>
-                            <button class="tool-btn" id="lipsTool">💋 Lips</button>
-                            <button class="tool-btn" id="hairTool">💇 Hair</button>
-                            <button class="tool-btn" id="resetFaceChart">🔄 Reset</button>
+                            <button class="tool-btn">💄 Foundation</button>
+                            <button class="tool-btn">👁️ Eyes</button>
+                            <button class="tool-btn">💋 Lips</button>
+                            <button class="tool-btn">💇 Hair</button>
+                            <button class="tool-btn">🔄 Reset</button>
                         </div>
                     </div>
 
@@ -69,54 +71,50 @@
                 </div>
             </div>
 
-            <!-- 🎨 ✅ Film Color Palette (Right) -->
-            <div class="character-section film-color-palette">
-                <h2>🎨 Film Color Palette</h2>
-                <div class="palette-container">
-                    <!-- ✅ Color Wheel -->
-                    <div class="color-wheel-container">
-                        <input type="color" id="colorWheel" class="color-wheel">
+            <!-- ✅ Right Panel: Film Color Palette & Extras -->
+            <div class="right-panel">
+                <!-- 🎨 Film Color Palette -->
+                <div class="character-section film-color-palette">
+                    <h2>🎨 Film Color Palette</h2>
+                    <div class="palette-container">
+                        <div class="color-wheel-container">
+                            <input type="color" id="colorWheel" class="color-wheel">
+                        </div>
+                        <div class="color-palette">
+                            <div id="colorSwatches" class="swatches-grid"></div>
+                            <button id="resetPalette">Reset Palette</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- ✅ Moodboards, Notes, Lookbooks -->
+                <div class="character-extras-container">
+                    <div class="character-section">
+                        <h2>Moodboards</h2>
+                        <div class="moodboard-upload" onclick="document.getElementById('moodboard-input').click()">Drag & Drop Images Here</div>
+                        <input type="file" id="moodboard-input" accept="image/*" multiple style="display: none;">
+                        <div class="moodboard-grid" id="moodboard-grid"></div>
                     </div>
 
-                    <!-- ✅ Swatches Grid -->
-                    <div class="color-palette">
-                        <div id="colorSwatches" class="swatches-grid"></div>
-                        <button id="resetPalette">Reset Palette</button>
+                    <div class="character-section">
+                        <h2>📝 Character Notes</h2>
+                        <textarea id="characterNotes" placeholder="Write your notes here..." rows="5"></textarea>
+                        <button id="saveNotes">Save Notes</button>
+                        <p id="notesMessage" style="color: green; display: none;">✅ Notes saved!</p>
+                    </div>
+
+                    <div class="character-section">
+                        <h2>Lookbooks</h2>
+                        <div class="lookbook-grid" id="lookbook-grid"></div>
                     </div>
                 </div>
             </div>
-        </div> <!-- ✅ Closes character-profiles-container -->
-
-        <!-- ✅ New Row Layout for Moodboards, Notes & Lookbooks -->
-        <div class="character-extras-container">
-            <!-- ✅ Moodboards Section -->
-            <div class="character-section">
-                <h2>Moodboards</h2>
-                <div class="moodboard-upload" onclick="document.getElementById('moodboard-input').click()">Drag & Drop Images Here</div>
-                <input type="file" id="moodboard-input" accept="image/*" multiple style="display: none;">
-                <div class="moodboard-grid" id="moodboard-grid"></div>
-            </div>
-
-            <!-- ✅ Notes Section -->
-            <div class="character-section">
-                <h2>📝 Character Notes</h2>
-                <textarea id="characterNotes" placeholder="Write your notes here..." rows="5"></textarea>
-                <button id="saveNotes">Save Notes</button>
-                <p id="notesMessage" style="color: green; display: none;">✅ Notes saved!</p>
-            </div>
-
-            <!-- ✅ Lookbooks Section -->
-            <div class="character-section">
-                <h2>Lookbooks</h2>
-                <div class="lookbook-grid" id="lookbook-grid"></div>
-            </div>
-        </div> <!-- ✅ Closes character-extras-container -->
-
+        </div>
     </div> <!-- ✅ Closes character-breakdown-container -->
 
     <!-- ✅ JavaScript Files -->
     <script src="assets/js/character-breakdown.js"></script>
     <script src="assets/js/filmColorPalette.js"></script>
-    <script src="assets/js/digitalFaceChart.js"></script> <!-- ✅ New JS file for Face Chart -->
+    <script src="assets/js/digitalFaceChart.js"></script> 
 </body>
 </html>
