--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -11,10 +11,10 @@
         <h1>Character Breakdown & Design</h1>
         <a href="dashboard.html" class="back-btn">← Back to Dashboard</a>
 
-        <!-- ✅ Main Layout: Character Profiles & Digital Face Chart (Left) + Extras (Right) -->
-        <div class="main-content">
-            <!-- ✅ Left Panel: Character Profiles & Digital Face Chart -->
-            <div class="left-panel">
+        <!-- ✅ Main Layout: Grid-Based for Proper Stacking -->
+        <div class="main-grid">
+            <!-- ✅ Left Column: Character Profiles & Digital Face Chart -->
+            <div class="left-column">
                 <!-- 🎭 Character Profiles -->
                 <div class="character-section">
                     <h2>Character Profiles</h2>
@@ -31,7 +31,7 @@
                     <div id="character-list" class="character-grid"></div>
                 </div>
 
-                <!-- 🎭 Digital Face Chart (NOW SEPARATE) -->
+                <!-- 🎭 Digital Face Chart (SEPARATE from Character Profiles) -->
                 <div class="character-section digital-face-chart">
                     <h2>🎭 Digital Face Chart</h2>
                     <div class="face-chart-container">
@@ -71,8 +71,8 @@
                 </div>
             </div>
 
-            <!-- ✅ Right Panel: Film Color Palette & Extras -->
-            <div class="right-panel">
+            <!-- ✅ Right Column: Film Color Palette & Extras -->
+            <div class="right-column">
                 <!-- 🎨 Film Color Palette -->
                 <div class="character-section film-color-palette">
                     <h2>🎨 Film Color Palette</h2>
