--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -11,14 +11,13 @@
         <h1>Character Breakdown & Design</h1>
         <a href="dashboard.html" class="back-btn">← Back to Dashboard</a>
 
-        <!-- ✅ Main Layout: Grid-Based for Proper Stacking -->
-        <div class="main-grid">
-            <!-- ✅ Left Column: Character Profiles & Digital Face Chart -->
-            <div class="left-column">
-                <!-- 🎭 Character Profiles -->
+        <!-- ✅ Main Content Grid -->
+        <div class="main-content">
+            <!-- ✅ Left Panel: Character Profiles & Digital Face Chart -->
+            <div class="left-panel">
                 <div class="character-section">
                     <h2>Character Profiles</h2>
-                    <form id="character-form">
+                    <form id="character-form" class="character-form">
                         <input type="text" id="character-name" placeholder="Character Name">
                         <input type="text" id="actor-name" placeholder="Actor Name">
                         <input type="number" id="character-age" placeholder="Age">
@@ -31,34 +30,33 @@
                     <div id="character-list" class="character-grid"></div>
                 </div>
 
-                <!-- 🎭 Digital Face Chart (SEPARATE from Character Profiles) -->
-                <div class="character-section digital-face-chart">
+                <!-- 🎭 Digital Face Chart (Now Separate) -->
+                <div class="character-section digital-face-chart" id="digital-face-chart">
                     <h2>🎭 Digital Face Chart</h2>
                     <div class="face-chart-container">
-                        <!-- Left: Upload & Saved Looks -->
+                        <!-- 📌 Left Panel: Upload & Saved Looks -->
                         <div class="face-chart-left">
                             <h3>📸 Upload Headshot</h3>
                             <input type="file" id="uploadHeadshot" accept="image/*">
                             <div id="headshotPreview" class="headshot-placeholder">No Image Uploaded</div>
-
                             <h3>🎭 Saved Looks</h3>
                             <div id="savedLooks" class="saved-looks-grid"></div>
                         </div>
 
-                        <!-- Center: Editable Face Chart -->
+                        <!-- 🎨 Center: Editable Face Chart -->
                         <div class="face-chart-center">
                             <canvas id="faceCanvas"></canvas>
                             <p>Use AI tools to apply makeup & hair changes.</p>
                         </div>
 
-                        <!-- Right: Makeup & Hair Tools -->
+                        <!-- 🎨 Right Panel: Makeup & Hair Tools -->
                         <div class="face-chart-right">
                             <h3>🎨 Makeup & Hair Tools</h3>
-                            <button class="tool-btn">💄 Foundation</button>
-                            <button class="tool-btn">👁️ Eyes</button>
-                            <button class="tool-btn">💋 Lips</button>
-                            <button class="tool-btn">💇 Hair</button>
-                            <button class="tool-btn">🔄 Reset</button>
+                            <button class="tool-btn" id="foundationTool">💄 Foundation</button>
+                            <button class="tool-btn" id="eyesTool">👁️ Eyes</button>
+                            <button class="tool-btn" id="lipsTool">💋 Lips</button>
+                            <button class="tool-btn" id="hairTool">💇 Hair</button>
+                            <button class="tool-btn" id="resetFaceChart">🔄 Reset</button>
                         </div>
                     </div>
 
@@ -71,9 +69,8 @@
                 </div>
             </div>
 
-            <!-- ✅ Right Column: Film Color Palette & Extras -->
-            <div class="right-column">
-                <!-- 🎨 Film Color Palette -->
+            <!-- ✅ Right Panel: Film Color Palette -->
+            <div class="right-panel">
                 <div class="character-section film-color-palette">
                     <h2>🎨 Film Color Palette</h2>
                     <div class="palette-container">
@@ -86,35 +83,36 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- ✅ Moodboards, Notes, Lookbooks -->
-                <div class="character-extras-container">
-                    <div class="character-section">
-                        <h2>Moodboards</h2>
-                        <div class="moodboard-upload" onclick="document.getElementById('moodboard-input').click()">Drag & Drop Images Here</div>
-                        <input type="file" id="moodboard-input" accept="image/*" multiple style="display: none;">
-                        <div class="moodboard-grid" id="moodboard-grid"></div>
-                    </div>
-
-                    <div class="character-section">
-                        <h2>📝 Character Notes</h2>
-                        <textarea id="characterNotes" placeholder="Write your notes here..." rows="5"></textarea>
-                        <button id="saveNotes">Save Notes</button>
-                        <p id="notesMessage" style="color: green; display: none;">✅ Notes saved!</p>
-                    </div>
-
-                    <div class="character-section">
-                        <h2>Lookbooks</h2>
-                        <div class="lookbook-grid" id="lookbook-grid"></div>
-                    </div>
-                </div>
             </div>
-        </div>
+        </div> <!-- ✅ Closes main-content -->
+
+        <!-- ✅ Moodboards, Notes & Lookbooks (No Overlap Now) -->
+        <div class="character-extras-container">
+            <div class="character-section">
+                <h2>Moodboards</h2>
+                <div class="moodboard-upload" onclick="document.getElementById('moodboard-input').click()">Drag & Drop Images Here</div>
+                <input type="file" id="moodboard-input" accept="image/*" multiple style="display: none;">
+                <div class="moodboard-grid" id="moodboard-grid"></div>
+            </div>
+
+            <div class="character-section">
+                <h2>📝 Character Notes</h2>
+                <textarea id="characterNotes" placeholder="Write your notes here..." rows="5"></textarea>
+                <button id="saveNotes">Save Notes</button>
+                <p id="notesMessage" style="color: green; display: none;">✅ Notes saved!</p>
+            </div>
+
+            <div class="character-section">
+                <h2>Lookbooks</h2>
+                <div class="lookbook-grid" id="lookbook-grid"></div>
+            </div>
+        </div> <!-- ✅ Closes character-extras-container -->
+
     </div> <!-- ✅ Closes character-breakdown-container -->
 
     <!-- ✅ JavaScript Files -->
     <script src="assets/js/character-breakdown.js"></script>
     <script src="assets/js/filmColorPalette.js"></script>
-    <script src="assets/js/digitalFaceChart.js"></script> 
+    <script src="assets/js/digitalFaceChart.js"></script> <!-- ✅ JS for Face Chart -->
 </body>
 </html>
